--- a/src/main/resources/templates/admin/events/list.html
+++ b/src/main/resources/templates/admin/events/list.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <div layout:fragment="content">
-      <h1>イベント一覧1</h1>
+      <h1>イベント一覧</h1>
       <table class="table table-striped mt-4">
         <thead class="bg-primary text-white">
           <tr>
@@ -21,11 +21,11 @@
           </tr>
         </thead>
         <tbody>
-          <tr th:each="	event: ${events}" th:object="${event}">
+          <tr th:each="	events: ${event}" th:object="${events}">
             <td th:text="*{id}"></td>
             <td th:text="*{name}"></td>
             <td th:text="*{maxParticipant}"></td>
-			<td th:text="*{user.id}"></td>
+			<td th:text="*{eventUsers.size()}"></td>
 			<td th:text="*{category.name}"></td>
 			<td th:text="*{user.email}"></td>
             <td th:text="*{#dates.format(createdAt, 'yyyy年MM月dd日')}"></td>
