--- a/src/main/resources/templates/admin/events/edit.html
+++ b/src/main/resources/templates/admin/events/edit.html
@@ -5,7 +5,7 @@
   </head>
   <body>
 	<div layout:fragment="content">
-	      <form th:action="@{/admin/events/edit/{id}(id=*{id})}" th:object="${events}" method="post">
+	      <form th:action="@{/admin/events/edit/{id}(id=*{id})}" th:object="${event}" method="post">
 	        <ul th:if="${#fields.hasErrors()}" class="alert alert-danger" role="alert">
 	          <li th:each="err : ${#fields.errors('*')}">
 	            <span th:text="${err}"></span>
