--- a/src/main/resources/templates/events/list.html
+++ b/src/main/resources/templates/events/list.html
@@ -21,11 +21,11 @@
           </tr>
         </thead>
         <tbody>
-          <tr th:each="	event: ${events}" th:object="${event}">
+          <tr th:each="	events: ${event}" th:object="${events}">
             <td th:text="*{id}"></td>
             <td th:text="*{name}"></td>
             <td th:text="*{maxParticipant}"></td>
-			<td th:text="*{user.id}"></td>
+			<td th:text="*{eventUsers.size()}"></td>
 			<td th:text="*{category.name}"></td>
 			<td th:text="*{user.email}"></td>
             <td th:text="*{#dates.format(createdAt, 'yyyy年MM月dd日')}"></td>
