--- a/src/main/resources/templates/admin/chats/talk.html
+++ b/src/main/resources/templates/admin/chats/talk.html
@@ -4,26 +4,27 @@
     <meta charset="UTF-8" th:remove="tag">
 	<link rel="stylesheet" type = "text/css" th:href="@{css/style.css}">
   </head>
-  <body><div layout:fragment="content">
-	<form th:action ="@{/admin/chats/talk/{id}(id=*{id})}" th:object="${chat}" method="post">
-	 <h1 class="page-header"  th:text = ${event.name}>イベント名</h1>
-	 <div class="form-group" th:classappend="${#fields.hasErrors('body')} ? error">
-       <label for="chat.body">Body</label>
-	  
-     </div>
-	 <div>
-		<a th:href="@{/admin/chats/talk/{id}(id=*{id})}" class="btn btn-primary">登録</a>
-   	</div>
-		<div th:each = "chat:${chats}" th:object="${event}">
-			<div class="chat_messege">
-			 <ul th:each="chats: ${chat}" th:object="${chat}">
-				<li th:text="*{user.email}"></li>
-	            <li th:text="*{body}"></lu>
-	            <li th:text="*{#dates.format(createdAt, 'yyyy年MM月dd日HH時mm分ss秒')}"></li>
-	  	  	  </ul>
-			</div>
+  <body>
+	<div layout:fragment="content">
+	<form th:action="@{/admin/chats/create}" th:object="${chat}" method="post">
+	<h1 th:text = "${event.name}"></h1>
+	<ul th:if="${#fields.hasErrors()}" class="alert alert-danger" role="alert">
+      <li th:each="err : ${#fields.errors('*')}">
+        <span th:text="${err}"></span>
+      </li>
+	</ul>
+		<div class = "message" 	th:each="chats: ${chat}" th:object="${chats}">
+			<div class = "username" th:text="${user.email}"></div>
+			<div th:text= "*{body}"></div>
+			<div class = "time-stamp" th:text="*{#dates.format(createdAt, 'yyyy年MM月dd日HH時mm分ss秒')}"></div>
 		</div>
-	  </form> 
-    </div>
+			<label for="chat.body">Body</label>
+			<input class="form-control" type="text" id="body" name="body">
+			<input type="hidden" id="event" name="event" th:value="${event.id}">
+			<div>
+		        <input class="btn btn-primary" type="submit" value="登録">
+	     	</div>
+		</form>
+	 </div>
   </body>
 </html>	
